--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,6 @@
 export(age_five)
 export(age_lt)
 export(age_single)
-export(lifeexp)
+export(le)
 importFrom(Rcpp,sourceCpp)
 useDynLib(poputils, .registration = TRUE)
