--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(age_mid)
 export(age_upper)
 export(clean_age)
 export(le)
+export(make_age_effect)
+export(make_linear_pred)
 importFrom(Rcpp,sourceCpp)
 useDynLib(poputils, .registration = TRUE)
