--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(clean_age)
 export(le)
 export(make_age_effect)
 export(make_linear_pred)
+export(set_age_open)
 importFrom(Rcpp,sourceCpp)
 useDynLib(poputils, .registration = TRUE)
