added function collapse_age

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(age_lower)
 export(age_mid)
 export(age_upper)
 export(clean_age)
+export(collapse_age)
 export(le)
 export(make_age_effect)
 export(make_linear_pred)
