--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,12 @@ LinkingTo:
     Rcpp
 Imports:
     checkmate,
-    Rcpp
-Suggests: 
+    cli,
+    Rcpp,
+    rvec,
+    vctrs
+Suggests:
+    dplyr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
