--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,9 @@ Imports:
     checkmate,
     cli,
     Rcpp,
+    rlang,
     rvec,
-    vctrs
+    tidyselect
 Suggests:
     dplyr,
     testthat (>= 3.0.0)
