--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(lifeexp)
 export(reformat_age)
 export(reformat_sex)
 export(set_age_open)
+export(to_matrix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(poputils, .registration = TRUE)
