--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,7 @@ Imports:
 Suggests:
     dplyr,
     testthat (>= 3.0.0)
+Remotes:
+    bayesiandemography/rvec
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
