--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Depends:
+    R (>= 4.3.0)
 LinkingTo: 
     Rcpp
 Imports:
