renamed collapse_age to combine_age

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(age_lower)
 export(age_mid)
 export(age_upper)
 export(check_age)
-export(collapse_age)
+export(combine_age)
 export(find_label_female)
 export(find_label_male)
 export(find_var_age)
