--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,10 @@ export(find_label_male)
 export(find_var_age)
 export(find_var_sexgender)
 export(find_var_time)
+export(groups_colnums)
 export(lifeexp)
+export(matrix_to_list_of_cols)
+export(matrix_to_list_of_rows)
 export(reformat_age)
 export(reformat_sex)
 export(set_age_open)
