working on c functions for lifetab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(age_lower)
 export(age_mid)
 export(age_upper)
 export(check_age)
+export(check_no_overlap_colnums)
 export(combine_age)
 export(find_label_female)
 export(find_label_male)
