--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,17 +19,21 @@ Depends:
 LinkingTo: 
     cpp11
 Imports:
-    checkmate,
     cli,
     rlang,
     rvec,
+    tibble,
     tidyselect,
+    utils,
     vctrs
 Suggests:
     covr,
     dplyr,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Remotes:
     bayesiandemography/rvec
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
