--- a/data-raw/Makefile
+++ b/data-raw/Makefile
@@ -1,6 +1,7 @@
 
 .PHONY: all
 all: ../data/nzmort.rda \
+     ../data/nzmort_rvec.rda \
      ../data/west_mx.rda \
      documentation
 
@@ -8,6 +9,10 @@ all: ../data/nzmort.rda \
 ../data/nzmort.rda: nzmort/nzmort.R \
   nzmort/DPE403905_20230924_095611_86.csv.gz \
   nzmort/VSD349204_20230924_095835_74.csv.gz
+	Rscript $^ $@
+
+../data/nzmort_rvec.rda: nzmort/nzmort_rvec.R \
+  ../data/nzmort.rda
 	Rscript $^ $@
 
 ../data/west_mx.rda: west_mx/west_mx.R
