--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,3 +39,4 @@ Remotes:
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
+URL: https://bayesiandemography.github.io/poputils/
