--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(age_mid)
 export(age_upper)
 export(check_age)
 export(check_equal_length)
+export(check_n)
 export(check_no_overlap_colnums)
 export(combine_age)
 export(ex_to_lifetab_brass)
