--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(lifetab)
 export(logit)
 export(matrix_to_list_of_cols)
 export(matrix_to_list_of_rows)
+export(q0_to_m0)
 export(reformat_age)
 export(reformat_sex)
 export(set_age_open)
