tidied up documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(matrix_to_list_of_rows)
 export(q0_to_m0)
 export(reformat_age)
 export(reformat_sex)
+export(rr3)
 export(set_age_open)
 export(to_matrix)
+export(trim_01)
 useDynLib(poputils, .registration = TRUE)
