--- a/data-raw/Makefile
+++ b/data-raw/Makefile
@@ -1,10 +1,16 @@
 
 .PHONY: all
-all: ../data/nzmort.rda \
+all: ../data/iran_fertility.rda \
+     ../data/nzmort.rda \
      ../data/nzmort_rvec.rda \
      ../data/west_lifetab.rda \
      documentation
 
+
+../data/iran_fertility.rda: iran_fertility/iran_fertility.R \
+  iran_fertility/table_4.1.csv \
+  iran_fertility/table_4.2.csv
+	Rscript $^ $@
 
 ../data/nzmort.rda: nzmort/nzmort.R \
   nzmort/DPE403905_20230924_095611_86.csv.gz \
