added all_of() calls to to_matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,4 +31,5 @@ export(set_age_open)
 export(tfr)
 export(to_matrix)
 export(trim_01)
+importFrom(tidyselect,all_of)
 useDynLib(poputils, .registration = TRUE)
