deprecated function ex_to_lifetab_brass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(check_equal_length)
 export(check_n)
 export(check_no_overlap_colnums)
 export(combine_age)
+export(e0_to_lifetab_logit)
 export(ex_to_lifetab_brass)
 export(find_label_female)
 export(find_label_male)
