--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: poputils
 Type: Package
 Title: Demographic Analysis and Data Manipulation
-Version: 0.5.0
+Version: 0.6.1
 Authors@R: 
     c(person(given = "John",
              family = "Bryant",
@@ -24,6 +24,7 @@ LinkingTo:
     cpp11
 Imports:
     cli,
+    lifecycle,
     rlang,
     rvec,
     tibble,
