--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -10,6 +10,9 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
+
+    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
@@ -23,6 +26,7 @@ jobs:
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,   r: '4.2.2'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
